--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  @apply bg-neutral-900; /* ou qualquer cor do Tailwind que você queira usar */
+}
